kubernetes/apps/op/onepassword-connect/app/httproute-envoy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: onepassword-connect-envoy
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
    sectionName: https
  hostnames:
  - "op-connect.${HOME_DOMAIN}"
  rules:
  - backendRefs:
    - name: onepassword-connect
      port: 8080
